--- a/src/pages/Recipe/Recipe.css
+++ b/src/pages/Recipe/Recipe.css
@@ -96,7 +96,6 @@
   display: grid;
   grid-template-columns: 1fr 350px;
   gap: 2rem;
-  margin-top: 1rem;
 }
 
 .recipe-content {
@@ -105,7 +104,7 @@
 
 .recipe-images {
   position: sticky;
-  top: 1rem;
+  margin-top: 1rem;
   height: fit-content;
 }
 
